--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+clearpassword
+clearpassword.exe
+
 # If you prefer the allow list template instead of the deny list, see community template:
 # https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
 #
